overflow-x fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,12 @@
     margin: 0;
 }
 
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 @media only screen and (max-width: 500px) {
     #hero {
         font-size: 1.9rem;
